# schelling

./: .clang-format  .clang-tidy  .gitignore  .zenodo.json  AGENTS.md  AUTHORS  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  app.hpp  bench.json  bench_baseline.csv  bench_cpp.csv  bench_cpp_clean.csv  bench_cpp_old.csv  bench_cpp_rejection.csv  bench_py.csv  bench_py_mp.csv  bench_py_small.csv  bench_results.csv  bitwords.hpp  checkpoints.hpp  cli.hpp  config.hpp  cost_aggregator.hpp  cs_stop.hpp  experiment.hpp  geometry.hpp  geometry_lollipop.hpp  heatmap.csv  heatmap.png.bak  heatmap.ppm  histogram.hpp  histogram_plotter.hpp  hitting_time_bench  kcenter_hist.hpp  (+27 more)
.github/: pull_request_template.md
Python_Version/: agentsJ.py  app_headlessJ.py  bench_cython_scaling.py  cython_bench.cpp  cython_bench.pyx  modelJ.py  py_api.py  python_gbench.cpp  setup.py
bench/: lollipop_bench.cpp
include/app/: app.hpp
include/cli/: cli.hpp
include/core/: approx.hpp  bitops.hpp  bitpack.hpp  bitset.hpp  bitset_select.hpp  config.hpp  fast_bitset.hpp  graph_api.hpp  perf.hpp  plf_bitset.h  random_transition.hpp  rng.hpp  schelling_threshold.hpp
include/experiment/: simulator.hpp
include/graphs/: clique.hpp  clique_graph.hpp  lollipop.hpp  lollipop_graph.hpp  path.hpp  path_graph.hpp  path_graph_64.hpp  torus_grid.hpp
include/graphs/core/: graph_base.hpp
include/graphs/detail/: padded_bitset.hpp
include/graphs/testing/: lollipop_access.hpp  path_access.hpp
include/io/: live_plot.hpp  plot.hpp  scatter_reservoir.hpp
include/jit/: jit.hpp
include/rng/: splitmix64.hpp
include/sim/: graph_concepts.hpp  init.hpp  job_handler.hpp  jobs.hpp  metrics.hpp  random_stepper.hpp  reductions.hpp  schelling_next.hpp  schelling_sim.hpp  sim.hpp  step_dense.hpp  world_packed.hpp
include/stats/: dyn_cap.hpp  eb_cs.hpp
include/util/: bitset_vector.hpp  timing.hpp
scratch_build/: test  test.cpp  test2  test2.cpp
scripts/: bench_hitting_time.py  plot_cpp_csv.py  plot_gbench_csv_compare.py  plot_scaling.py  py_schelling_mp_runner.py  py_schelling_standalone.py  run.py
src/: main.cpp
src/cli/: cli.cpp
src/jit/: jit.cpp
src/shims/: nodesoup_stubs.cpp
testing/: progress_tracker.hpp
testing/bench/: hitting_time_bench.cpp  lollipop_bench.cpp
testing/bitset/: Makefile  main.cpp
testing/clique/: Makefile  main.cpp
testing/lollipop/: Makefile  main.cpp
testing/path/: Makefile  main.cpp
tests/: bench_clique_occ.cpp  bench_path_local.cpp  bruteforce_tests.cpp  test_approx_bruteforce.cpp
